--- a/jemdoc.css
+++ b/jemdoc.css
@@ -177,21 +177,23 @@ pre {
 }
 
 div#footer {
-	font-size: small;
-	border-top: 1px solid #c0c0c0;
-	padding-top: 0.1em;
-	margin-top: 4.0em;
-	color: #c0c0c0;
+    font-size: small;
+    border-top: 1px solid #c0c0c0;
+    padding-top: 0.1em;
+    margin-top: 4.0em;
+    color: #333;
 }
 
 div#footer a {
-	color: #333; /* 更改为您想要的颜色值，例如：#333 表示深灰色 */
+    color: #333;
 }
 
 div#footer-text {
     float: left;
     padding-bottom: 8px;
+    color: #333; /* 更改为您想要的颜色值，例如：#333 表示深灰色 */
 }
+
 
 
 ul, ol, dl {
